--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-		<div class="slide slide1">
+		<div class="slide" id="slide1">
 			<h1>Hello</h1>
 			<h2>World</h2>
 		</div>
-		<div class="slide slide2"></div>
-		<div class="slide slide3"></div>
+		<div class="slide" id="slide2"></div>
+		<div class="slide" id="slide3"></div>
+		<div class="slide" id="slide4"></div>
 
 		<!-- js scripts -->
 		<script src="js/jquery-2.0.3.min.js"></script>
