--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
+		<div class="navbar">
+			<a href="#slide2">Hello</a>
+		</div>
 		<div class="slide" id="slide1">
 			<h1>Hello</h1>
 			<h2>World</h2>
