Fading out, offset working

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 		<div class="navbar">
 			<a href="#slide2">Hello</a>
 		</div>
-		<div class="slide" id="slide1">
+		<div class="parallax slide" id="slide1" data-speed="0" data-transparency="0.7"
+		data-fade-out-start="-300" data-fade-out-end="-150" data-fade-in-start="0" data-fade-in-end="0">
 			<h1>Hello</h1>
 			<h2>World</h2>
 		</div>
-		<div class="slide" id="slide2"></div>
-		<div class="slide" id="slide3"></div>
-		<div class="slide" id="slide4"></div>
+		<div class="parallax slide" id="slide2" data-speed="0.2" data-transparency="0.5"
+		data-fade-out-start="-500" data-fade-out-end="0" data-fade-in-start="0" data-fade-in-end="400"></div>
+		<div class="parallax slide" id="slide3" data-speed="0.2"></div>
+		<div class="parallax slide" id="slide4" data-speed="0.6" data-offset="-0.14"></div>
+
+		<div class="parallax object" id="picture" data-transparency="1" data-slide-num="2" data-slide-percent="90" data-speed="-0.4"></div>
 
 		<!-- js scripts -->
 		<script src="js/jquery-2.0.3.min.js"></script>
