--- a/index.html
+++ b/index.html
@@ -8,18 +8,49 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-		<div class="navbar">
-			<a href="#slide3">slide 3</a>
+		<div class="parallax slide" id="slide1">
+			<img src="img/logo.png" alt="logo" class="logo">
+			<h2 class="subtitle" data-stellar-ratio="0.9">Process Book by Patrick Chiang</h2>
 		</div>
-		<div class="parallax slide" id="slide1" data-transparency="0.7" data-fade-out-start="-300" data-fade-out-end="-150">
-			<h1>Hello</h1>
-			<h2>World</h2>
+		<div class="parallax slide" id="slide2">
+			<h2 class="title">Introduction</h2>
+			<p class="point top-2 left-1">
+				This process book documents the design thinking experience and prototyping steps that our team (Team E) took in creating <span class="purple">Welp</span>. It includes everything from abstract concepts like our train of thought and rationale to actual sketches and prototypes we made.
+			</p>
+			<p class="point top-5 left-1"></p>
 		</div>
-		<div class="parallax slide" id="slide2" data-transparency="0.5" data-fade-out-start="-500" data-fade-out-end="0" data-fade-in-start="0" data-fade-in-end="400" data-stellar-ratio="1.2"></div>
-		<div class="parallax slide" id="slide3" data-stellar-ratio="1.2"></div>
-		<div class="parallax slide" id="slide4" data-stellar-ratio="1.2"></div>
-
-		<div class="parallax object" id="picture" data-transparency="1" data-slide-num="2" data-slide-percent="90" data-stellar-ratio="0.5"></div>
+		<div class="parallax slide" id="slide3">
+			<p class="problems" data-stellar-ratio="1">
+				What problems do UW students face?
+			</p>
+			<p class="problems small left-6 top-6" data-stellar-ratio="0.7">
+				Living
+			</p>
+			<p class="problems small left-7 top-4" data-stellar-ratio="0.6">
+				Classes
+			</p>
+			<p class="problems small left-8 top-3" data-stellar-ratio="0.4">
+				Majors
+			</p>
+			<p class="problems small left-9 top-6" data-stellar-ratio="0.5">
+				Activities
+			</p>
+			<p class="problems small left-6 top-4" data-stellar-ratio="0.8">
+				Finances
+			</p>
+			<p class="problems small left-7 top-3" data-stellar-ratio="0.7">
+				Connections
+			</p>
+			<p class="problems small left-8 top-6" data-stellar-ratio="0.8">
+				Jobs
+			</p>
+			<p></p>
+		</div>
+		<div class="parallax slide" id="slide4"></div>
+		<div class="parallax slide" id="slide5"></div>
+		<div class="parallax slide" id="slide6"></div>
+		<div class="parallax slide" id="slide7"></div>
+		<div class="parallax slide" id="slide8"></div>
 
 		<!-- js scripts -->
 		<script src="js/jquery-2.0.3.min.js"></script>
