--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Process Book Template</title>
+		<title>Process Book</title>
 
 		<!-- stylesheets -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -14,34 +14,38 @@
 		</div>
 		<div class="parallax slide" id="slide2">
 			<h2 class="title">Introduction</h2>
-			<p class="point top-2 left-1">
-				This process book documents the design thinking experience and prototyping steps that our team (Team E) took in creating <span class="purple">Welp</span>. It includes everything from abstract concepts like our train of thought and rationale to actual sketches and prototypes we made.
+			<p class="point top-2 left-1 right-1">
+				We used a Google Docs folder and our notebooks to keep track of all our creations throughout the project.
 			</p>
-			<p class="point top-5 left-1"></p>
+			<p class="point top-4 left-1 right-1">
+				This process book documents the design thinking experience and prototyping steps that our team (Team E) took in creating <span class="purple">Welp</span>. It includes everything from abstract concepts like our train of thought and rationale to actual sketches and prototypes we made.
+
+			</p>
 		</div>
 		<div class="parallax slide" id="slide3">
+			<p class="point top-2 left-1 right-5">For defining a problem space, we first asked ourselves what problems that we or our peers face on a daily basis.</p>
 			<p class="problems" data-stellar-ratio="1">
 				What problems do UW students face?
 			</p>
-			<p class="problems small left-6 top-6" data-stellar-ratio="0.7">
+			<p class="problems small left-6 top-6" data-stellar-ratio="1.2">
 				Living
 			</p>
-			<p class="problems small left-7 top-4" data-stellar-ratio="0.6">
+			<p class="problems small left-7 top-4" data-stellar-ratio="1.3">
 				Classes
 			</p>
-			<p class="problems small left-8 top-3" data-stellar-ratio="0.4">
+			<p class="problems small left-8 top-3" data-stellar-ratio="1.4">
 				Majors
 			</p>
-			<p class="problems small left-9 top-6" data-stellar-ratio="0.5">
+			<p class="problems small left-9 top-6" data-stellar-ratio="1.5">
 				Activities
 			</p>
-			<p class="problems small left-6 top-4" data-stellar-ratio="0.8">
+			<p class="problems small left-6 top-4" data-stellar-ratio="1.5">
 				Finances
 			</p>
-			<p class="problems small left-7 top-3" data-stellar-ratio="0.7">
+			<p class="problems small left-7 top-3" data-stellar-ratio="1.7">
 				Connections
 			</p>
-			<p class="problems small left-8 top-6" data-stellar-ratio="0.8">
+			<p class="problems small left-8 top-6" data-stellar-ratio="1.8">
 				Jobs
 			</p>
 			<p></p>
