--- a/index.html
+++ b/index.html
@@ -23,30 +23,33 @@
 			</p>
 		</div>
 		<div class="parallax slide" id="slide3">
-			<p class="point top-2 left-1 right-5">For defining a problem space, we first asked ourselves what problems that we or our peers face on a daily basis.</p>
-			<p class="problems" data-stellar-ratio="1">
+			<p class="point top-2 left-1 right-5">For defining a problem space, we first asked ourselves what kind of decisions that we or our peers make that while living as college students. We picked food because it was the most relevant and immediate, and it seemed like an easy problem to address, yet we felt it lacked a good solution.</p>
+			<p class="problems" data-stellar-ratio="3.0">
 				What problems do UW students face?
 			</p>
 			<p class="problems small left-6 top-6" data-stellar-ratio="1.2">
 				Living
 			</p>
-			<p class="problems small left-7 top-4" data-stellar-ratio="1.3">
+			<p class="problems large left-7 top-4" data-stellar-ratio="1.4">
 				Classes
 			</p>
-			<p class="problems small left-8 top-3" data-stellar-ratio="1.4">
+			<p class="problems small left-8 top-3" data-stellar-ratio="1.6">
 				Majors
 			</p>
-			<p class="problems small left-9 top-6" data-stellar-ratio="1.5">
+			<p class="problems medium left-9 top-6" data-stellar-ratio="1.8">
 				Activities
 			</p>
-			<p class="problems small left-6 top-4" data-stellar-ratio="1.5">
+			<p class="problems medium left-6 top-4" data-stellar-ratio="2.0">
 				Finances
 			</p>
-			<p class="problems small left-7 top-3" data-stellar-ratio="1.7">
+			<p class="problems small left-7 top-3" data-stellar-ratio="2.2">
 				Connections
 			</p>
-			<p class="problems small left-8 top-6" data-stellar-ratio="1.8">
-				Jobs
+			<p class="problems medium left-8 top-6" data-stellar-ratio="2.4">
+				Careers
+			</p>
+			<p class="problems large left-8 top-8" data-stellar-ratio="1.5">
+				Food
 			</p>
 			<p></p>
 		</div>
