--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 		<div class="parallax slide" id="slide2">
 			<h2 class="title">Introduction</h2>
 			<p class="point top-2 left-1 right-1">
-				We used a Google Docs folder and our notebooks to keep track of all our creations throughout the project.
-			</p>
-			<p class="point top-4 left-1 right-1">
 				This process book documents the design thinking experience and prototyping steps that our team (Team E) took in creating <span class="purple">Welp</span>. It includes everything from abstract concepts like our train of thought and rationale to actual sketches and prototypes we made.
-
+			</p>
+			<p class="point top-6 left-1 right-1">
+				Our theme was to design something to help students survive college. We believe that <span class="purple">Welp</span> addresses that problem.
 			</p>
 		</div>
 		<div class="parallax slide" id="slide3">
-			<p class="point top-2 left-1 right-5">For defining a problem space, we first asked ourselves what kind of decisions that we or our peers make that while living as college students. We picked food because it was the most relevant and immediate, and it seemed like an easy problem to address, yet we felt it lacked a good solution.</p>
+			<p class="point top-2 left-1 right-5">
+				For defining a problem space, we first asked ourselves what kind of decisions that we or our peers make that while living as college students. We picked food because it was the most relevant and immediate, and it seemed like an easy problem to address, yet we felt it lacked a good solution.
+			</p>
 			<p class="problems" data-stellar-ratio="3.0">
 				What problems do UW students face?
 			</p>
@@ -53,8 +54,36 @@
 			</p>
 			<p></p>
 		</div>
-		<div class="parallax slide" id="slide4"></div>
-		<div class="parallax slide" id="slide5"></div>
+		<div class="parallax slide" id="slide4">
+			<h2 class="title">Contexual Inquiry</h2>
+
+			<p class="point top-3 left-4 right-1">
+				To delve more deeply into the problem, we first had to get a sense of where people have a problem with their eating habits outside of the school dorm system. So, we conducted an interview with our peers.
+			</p>
+
+			<ul class="point small top-3 left-tiny right-7">
+				<p>Some of our questions: </p>
+				<li data-toggle="tooltip" title="Wesley: Hawaiian Barbeque the day before. Jessalyn: Tiger Room a week ago.">
+					When was the last time you ate on the Ave? Where?
+				</li>
+				<li data-toggle="tooltip" title="Both: Once or twice a week.">
+					How often do you eat on the Ave in a month?
+				</li>
+				<li data-toggle="tooltip" title="Wesley: Word of mouth, marching band people, sometimes Yelp. Jessalyn: Word of mouth, Yelp.">
+					How do you find recommendations on where to eat?
+				</li>
+				<li data-toggle="tooltip" title="Wesley: Quality > Price > Convenience. Jessalyn: Quality > Price.">
+					How do you decide where to eat?
+				</li>
+				<p class="clue">(Hover over questions for answers.)</p>
+				<a href="attach/Interview.txt">Full interview writeup</a>
+			</ul>
+
+		</div>
+		<div class="parallax slide" id="slide5">
+			<h2 class="title">Brainstorming</h2>
+			
+		</div>
 		<div class="parallax slide" id="slide6"></div>
 		<div class="parallax slide" id="slide7"></div>
 		<div class="parallax slide" id="slide8"></div>
