--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 			</p>
 
 			<ul class="point small top-3 left-tiny right-7">
-				<p>Some of our questions: </p>
+				<p>
+					Some of our questions:
+				</p>
 				<li data-toggle="tooltip" title="Wesley: Hawaiian Barbeque the day before. Jessalyn: Tiger Room a week ago.">
 					When was the last time you ate on the Ave? Where?
 				</li>
@@ -75,18 +77,40 @@
 				<li data-toggle="tooltip" title="Wesley: Quality > Price > Convenience. Jessalyn: Quality > Price.">
 					How do you decide where to eat?
 				</li>
-				<p class="clue">(Hover over questions for answers.)</p>
+				<p class="clue">
+					(Hover over questions for answers.)
+				</p>
 				<a href="attach/Interview.txt">Full interview writeup</a>
 			</ul>
 
 		</div>
 		<div class="parallax slide" id="slide5">
 			<h2 class="title">Brainstorming</h2>
-			
+			<img src="attach/40Q1.jpg" alt="40 Questions slide 2" class="image">
+			<img src="attach/40Q2.jpg" alt="40 Questions slide 2" class="image left-5">
+			<p class="point top-2 left-1 right-1">
+				As we got a better idea of what the problem was all about, we entered the brainstorming phase of the project. At this point, we went for quantity over quality, churning out as many ideas as possible, even ones we weren't sure were possible to engineer.
+			</p>
+			<p class="point top-6 left-1 right-1">
+				<a href="attach/ideas50.jpg" rel="popover" data-img="attach/ideas50.jpg">50 Ideas Blitzkrieg</a>
+				<br/>
+				<a href="attach/40Q1.jpg" rel="popover" data-img="attach/40Q1.jpg">40 Ideas Part 1</a>
+				<br />
+				<a href="attach/40Q2.jpg" rel="popover" data-img="attach/40Q2.jpg">40 Ideas Part 2</a>
+			</p>
+
 		</div>
-		<div class="parallax slide" id="slide6"></div>
+		<div class="parallax slide" id="slide6">
+			<h2 class="title">Personas</h2>
+		</div>
 		<div class="parallax slide" id="slide7"></div>
 		<div class="parallax slide" id="slide8"></div>
+		<div class="parallax slide" id="slide9"></div>
+		<div class="parallax slide" id="slide10"></div>
+		<div class="parallax slide" id="slide11"></div>
+		<div class="parallax slide" id="slide12"></div>
+		<div class="parallax slide" id="slide13"></div>
+		<div class="parallax slide" id="slide14"></div>
 
 		<!-- js scripts -->
 		<script src="js/jquery-2.0.3.min.js"></script>
