--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				To delve more deeply into the problem, we first had to get a sense of where people have a problem with their eating habits outside of the school dorm system. So, we conducted an interview with our peers.
 			</p>
 
-			<ul class="point small top-3 left-tiny right-7">
+			<ul class="point small top-3 left-tiny right-7" data-stellar-ratio="1.3">
 				<p>
 					Some of our questions:
 				</p>
@@ -88,10 +88,10 @@
 			<h2 class="title">Brainstorming</h2>
 			<img src="attach/40Q1.jpg" alt="40 Questions slide 2" class="image">
 			<img src="attach/40Q2.jpg" alt="40 Questions slide 2" class="image left-5">
-			<p class="point top-2 left-1 right-1">
+			<p class="point top-2 left-1 right-1" data-stellar-ratio="1.3">
 				As we got a better idea of what the problem was all about, we entered the brainstorming phase of the project. At this point, we went for quantity over quality, churning out as many ideas as possible, even ones we weren't sure were possible to engineer.
 			</p>
-			<p class="point top-6 left-1 right-1">
+			<p class="point top-6 left-1 right-1" data-stellar-ratio="1.2">
 				<a href="attach/ideas50.jpg" rel="popover" data-img="attach/ideas50.jpg">50 Ideas Blitzkrieg</a>
 				<br/>
 				<a href="attach/40Q1.jpg" rel="popover" data-img="attach/40Q1.jpg">40 Ideas Part 1</a>
@@ -102,9 +102,34 @@
 		</div>
 		<div class="parallax slide" id="slide6">
 			<h2 class="title">Personas</h2>
+			<p class="point top-2 left-5 right-1" data-stellar-ratio="1.4">
+				To help us answer questions like "what would the users want?", we created two personas: Kyle and Jenny. Whenever we need to make a design decision, we used them as representative references to aid our design.
+			</p>
+			<p class="point top-2 left-1 right-6" data-stellar-ratio="1.5">
+				<a href="attach/jenny.jpg" rel="popover" data-img="attach/jenny.jpg">Meet Jenny
+				<br />
+				<img src="attach/jenny-figure.png" alt="jenny" /></a>
+				<br />
+				<a href="attach/kyle.jpg" rel="popover" data-img="attach/kyle.jpg">Meet Kyle
+				<br />
+				<img src="attach/kyle-figure.png" alt="kyle" /></a>
+			</p>
 		</div>
-		<div class="parallax slide" id="slide7"></div>
-		<div class="parallax slide" id="slide8"></div>
+		<div class="parallax slide" id="slide7">
+			<h2 class="title">Sketches</h2>
+			<a href="attach/sk1.jpg"><img src="attach/sk1.jpg" alt="sketch 1" data-stellar-ratio="1.3" class="point top-2 left-1 small-img" /></a>
+			<a href="attach/sk2.jpg"><img src="attach/sk2.jpg" alt="sketch 2" data-stellar-ratio="1.4" class="point top-3 left-4 small-img" /></a>
+			<a href="attach/sk3.jpg"><img src="attach/sk3.jpg" alt="sketch 3" data-stellar-ratio="1.5" class="point top-1 left-7 small-img" /></a>
+		</div>
+		<div class="parallax slide" id="slide8">
+			<h2 class="title">Prototypes</h2>
+			<p class="point top-2 left-1 right-1">
+				We made three low fidelity paper prototypes: a restaurant searching webapp, a mobile app that tells you how crowded it is, and a rewards program that encourages you to eat out.
+			</p>
+			<a href="attach/p11.jpg"><img src="attach/p11.jpg" alt="prototype 1" class="point top-5 smaller-img" /></a>
+			<a href="attach/p2.jpg"><img src="attach/p2.jpg" alt="prototype 2" class="point top-5 left-4 smaller-img" /></a>
+			<a href="attach/p3.jpg"><img src="attach/p3.jpg" alt="prototype 3" class="point top-5 left-7 smaller-img" /></a>
+		</div>
 		<div class="parallax slide" id="slide9"></div>
 		<div class="parallax slide" id="slide10"></div>
 		<div class="parallax slide" id="slide11"></div>
