Prototype testing & conundrum

--- a/index.html
+++ b/index.html
@@ -124,14 +124,29 @@
 		<div class="parallax slide" id="slide8">
 			<h2 class="title">Prototypes</h2>
 			<p class="point top-2 left-1 right-1">
-				We made three low fidelity paper prototypes: a restaurant searching webapp, a mobile app that tells you how crowded it is, and a rewards program that encourages you to eat out.
+				We made three low fidelity paper prototypes: a restaurant searching webapp, a mobile app that tells you how crowded it is, and a rewards program that encourages you to eat at new places.
 			</p>
 			<a href="attach/p11.jpg"><img src="attach/p11.jpg" alt="prototype 1" class="point top-5 smaller-img" /></a>
 			<a href="attach/p2.jpg"><img src="attach/p2.jpg" alt="prototype 2" class="point top-5 left-4 smaller-img" /></a>
 			<a href="attach/p3.jpg"><img src="attach/p3.jpg" alt="prototype 3" class="point top-5 left-7 smaller-img" /></a>
 		</div>
-		<div class="parallax slide" id="slide9"></div>
-		<div class="parallax slide" id="slide10"></div>
+		<div class="parallax slide" id="slide9">
+			<h2 class="title">Prototype Testing</h2>
+			<p class="point top-2 left-1 right-1">
+				We tested our paper prototypes by showing them to our peers and having them attempt to accomplish a pre-defined set of tasks that most users should encounter in normal usage, and then we asked them which of the 3 they liked best. All of our peers that we interviewed thought that our restaurant searching webapp idea was the most promising. This is where I started working on the higher fidelity prototype of the webapp based on our papers.
+			</p>
+			<p class="point top-8 left-1 right-1">
+				<a href="attach/prototype.pdf">Interview writeup</a>
+			</p>
+		</div>
+		<div class="parallax slide" id="slide10">
+			<p class="point top-1 left-1 right-1">
+				At the time we were facing a difficult conundrum. I knew it would be harder for "the engineer" (me) to make a working prototype. A working prototype was important to me because I thought actually allowing users to have hands on a product would give us much better feedback on how to improve our design. On the other hand, a lot of our peers we interviewed thought that a mobile app would be better.
+			</p>
+			<p class="point top-7 left-1 right-1">
+				I made it a webapp... one that is friendly to mobile devices.
+			</p>
+		</div>
 		<div class="parallax slide" id="slide11"></div>
 		<div class="parallax slide" id="slide12"></div>
 		<div class="parallax slide" id="slide13"></div>
