--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		</div>
 		<div class="parallax slide" id="slide10">
 			<p class="point top-1 left-1 right-1">
-				At the time we were facing a difficult conundrum. I knew it would be harder for "the engineer" (me) to make a working prototype. A working prototype was important to me because I thought actually allowing users to have hands on a product would give us much better feedback on how to improve our design. On the other hand, a lot of our peers we interviewed thought that a mobile app would be better.
+				At the time we were facing a difficult conundrum. I knew it would be impossible for "the engineer" (me) to make a working prototype if our product was of a mobile app. A working prototype was important to me because I thought actually allowing users to have hands on a product would give us much better feedback on how to improve our design. On the other hand, a lot of our peers we interviewed thought that a mobile app would be better than just a website.
 			</p>
 			<p class="point top-7 left-1 right-1">
 				I made it a webapp... one that is friendly to mobile devices.
