Finishing touches and menu

--- a/index.html
+++ b/index.html
@@ -14,6 +14,51 @@
 			</p>
 			<img src="img/logo.png" alt="logo" class="logo">
 			<h2 class="subtitle" data-stellar-ratio="0.9">Process Book by Patrick Chiang</h2>
+
+			<ul class="table top-6 left-1 right-1">
+				<li>
+					<a href="#slide2">Introduction</a>
+				</li>
+				<li>
+					<a href="#slide3">Problem Space</a>
+				</li>
+				<li>
+					<a href="#slide4">Contexual Inquiry</a>
+				</li>
+				<li>
+					<a href="#slide5">Brainstorming</a>
+				</li>
+				<li>
+					<a href="#slide6">Personas</a>
+				</li>
+				<li>
+					<a href="#slide7">Sketches</a>
+				</li>
+				<li>
+					<a href="#slide8">Prototyping</a>
+				</li>
+				<li>
+					<a href="#slide9">Prototype Testing</a>
+				</li>
+				<li>
+					<a href="#slide10">To app or not to app</a>
+				</li>
+				<li>
+					<a href="#slide11">Functional prototype</a>
+				</li>
+				<li>
+					<a href="#slide12">Heuristic Evaluation</a>
+				</li>
+				<li>
+					<a href="#slide13">Sleep is for the Weak</a>
+				</li>
+				<li>
+					<a href="#slide14">Final Design</a>
+				</li>
+				<li>
+					<a href="#slide15">Conclusion</a>
+				</li>
+			</ul>
 		</div>
 		<div class="parallax slide" id="slide2">
 			<h2 class="title">Introduction</h2>
