--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 			<p class="point top-1 left-1 right-1">
 				I fixed most of these problems. Then, taking the advice of our instructor and TA, we sought outside advice and asked people to help us identify even more problems with the prototype. Plenty more were found <a href="attach/todo.pdf">and we made a list to keep track of them all.</a>
 			</p>
-			<a href="attach/nosleep.png"><img src="attach/nosleep.png" alt="prototype 1" class="point top-4 left-4 smaller-img" /></a>
+			<img src="attach/nosleep.png" alt="prototype 1" class="point top-4 left-4 smaller-img" />
 			<p class="point top-9 left-1 right-1">
 				That's okay I wasn't planning on sleeping anyway...
 			</p>
