Bottom line too long

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 				Over the last quarter, my team worked our hardest to come up with and refine a design that is novel, intuitive, and usable. From our original perspective, "someone should make something to do this", we have more or less switched over to thinking about design from a problem-first point of view. We faced challenges and even had times where things seemed impossible, but we eventually bulldozed through the finish line. Despite our success, it still feels like if we had known what we now know at the beginning of the quarter, we could have done more, better. Or maybe that's just an indication that we learned a lot.
 			</p>
 			<p class="point top-9 left-1 right-1">
-				If there's only one thing I can take away from this course: <span class="bold">design is hard.</span>
+				In conclusion: <span class="bold">design is hard.</span>
 			</p>
 		</div>
 
