--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				INFO 360 Autumn 2013
 			</p>
 			<img src="img/logo.png" alt="logo" class="logo">
-			<h2 class="subtitle" data-stellar-ratio="0.9">Process Book by Patrick Chiang</h2>
+			<h2 class="subtitle" data-stellar-ratio="0.9">Process Book of Patrick Chiang</h2>
 
 			<ul class="table top-6 left-1 right-1">
 				<li>
